# mrmrs

./: .gitignore  .merck.yaml  Cargo.toml  LICENSE  README.md  mrmrs.pyi  pyproject.toml
.github/workflows/: ci.yaml  test.yml
bench/: benchmark.py  pyproject.toml
src/: lib.rs  mrmr.rs  utils.rs
src/stats/: corr.rs  feature.rs  fstat.rs  mod.rs
